--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 :root {
-
   --number-button-background-color: white;
   --number-button-background-color-hover: rgb(209, 204, 204);
   --other-button-text-color: #ff7433;
@@ -113,7 +112,8 @@
 body {
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
+ /* overflow: hidden;*/
 }
 
 button {
